--- a/gallery/time-varying-ka.html
+++ b/gallery/time-varying-ka.html
@@ -63,7 +63,7 @@ img {
 <div id="header">
 <h1 class="title">Time varying KA</h1>
 <h4 class="author"><em>Kyle Baron</em></h4>
-<h4 class="date"><em>Mon Feb 15 21:57:12 2016</em></h4>
+<h4 class="date"><em>Mon Feb 15 22:12:28 2016</em></h4>
 </div>
 
 
@@ -77,6 +77,7 @@ img {
 <li><code>SOLVERTIME</code> is the according to the solver (equivalent to <code>T</code> in NONMEM)</li>
 <li>Use <code>TIME</code> in <code>$MAIN</code> and <code>$TABLE</code> and use <code>SOLVERTIME</code> in <code>$ODE</code></li>
 </ul>
+<p><strong>NOTE</strong> this will break down if the records don’t start with a dose and when simulating multiple individuals; but a little book keeping could track when the first dose happened for each individual (<em>hint</em>: use <code>NEWIND</code>) and then force <code>KA</code> to be zero until the first dose.</p>
 </div>
 <div id="the-code" class="section level2">
 <h2>The code</h2>
@@ -88,10 +89,9 @@ $CMT GUT CENT
 
 $GLOBAL double TOD = 0;
 
-$MAIN if(EVID==1) TOD = TIME;
+$MAIN  if(EVID==1) TOD = TIME;
 
 $ODE 
-
 double TAD  = SOLVERTIME - TOD;
 double KA = KAMAX*pow(TAD,gam)/(pow(KAT50,gam) + pow(TAD,gam));
 
