--- a/gallery/random_mclapply.html
+++ b/gallery/random_mclapply.html
@@ -63,7 +63,7 @@ img {
 <div id="header">
 <h1 class="title">Simulation with <code>mclapply</code> is random</h1>
 <h4 class="author"><em>Kyle Baron</em></h4>
-<h4 class="date"><em>Thu Feb 25 16:48:00 2016</em></h4>
+<h4 class="date"><em>Thu Feb 25 16:52:39 2016</em></h4>
 </div>
 
 
@@ -81,6 +81,7 @@ RNGkind()</code></pre>
 <p>but important to note.</p>
 <div id="some-functions-to-help" class="section level2">
 <h2>Some functions to help</h2>
+<p>Simulate 100 subjects by default</p>
 <pre class="r"><code>sim &lt;- function(i,x,idata=data_frame(ID=1:100)) {
   x %&gt;% idata_set(idata) %&gt;% mrgsim(end=-1) %&gt;% as.tbl
 }</code></pre>
